# archon-ide

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  design-qa.md  fly.toml  fly.toml.example  package.json  start.sh
.github/: FUNDING.yml
backend/: Cargo.toml
backend/src/: ai.rs  auth.rs  fs.rs  git.rs  main.rs  terminal.rs  ws.rs
backend/src/agent/: domain.rs  memory.rs  mod.rs  model_adapter.rs  repository.rs  routes.rs  runner.rs  workspace.rs  workspace_sync.rs
backend/src/workspace/: domain.rs  repository.rs  routes.rs
claude/: Prompt_1  Prompt_10  Prompt_11  Prompt_12  Prompt_2  Prompt_3  Prompt_4  Prompt_5  Prompt_6  Prompt_7  Prompt_8  Prompt_9  README.me
docs/agents/: CLAUDE_PARALLEL_BUILD_PROMPT.md  GOOGLE_ANTIGRAVITY_IOS_WORKLOAD.md  GOOGLE_ANTIGRAVITY_UX_WORKLOAD.md  OPENCODE_BIG_PICKLE_WORKLOAD.md
docs/integrations/: CONTEXT_IMPORT_CONTRACT.md
docs/marketing/: ORGANIC_GROWTH_PLAYBOOK.md
docs/plans/: ios-priority-roadmap.md
docs/ux/: accessibility-guidelines.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: llms-full.txt  llms.txt  robots.txt  site.webmanifest  sitemap.xml
frontend/src/: App.tsx  main.tsx
ios/: Config.example.xcconfig  Config.xcconfig  README.md  project.yml
ios/ArchonTests/: APIErrorDecodingTests.swift  AgentChatViewModelTests.swift  AuthManagerTests.swift  DecodingTests.swift  KeychainStorageTests.swift  PollingTests.swift
supabase/migrations/: 20260722235000_create_archon_tenant_schema.sql  20260722235200_create_agent_tasks.sql  (+6 more)
(+68 files in other folders)
