[package]
name = "archon-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-ws = "0.3"
actix-cors = "0.7"
actix-files = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
git2 = { version = "0.19", default-features = false }
portable-pty = "0.8"
dirs = "5"
walkdir = "2"
ignore = "0.4"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
similar = "2"
notify = "6"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
